--- a/app/views/session/index.html.erb
+++ b/app/views/session/index.html.erb
@@ -1,2 +1,8 @@
 <h1>Session#index</h1>
 <p>Find me in app/views/session/index.html.erb</p>
+
+<%= form_tag('sessions', method: post) do |f| %>
+    
+<% end %>
+
+        
